[package]
name = "jsaas"
version = "0.0.1"
authors = ["Jason Longshore <jasonlongshore@titanclass.com.au>", "Christopher Hunt <christopher.hunt@titanclass.com.au>"]
edition = "2018"
keywords = ["js", "engine", "javascript", "dynamic", "duktape"]
license = "Apache-2.0"
repository = "https://github.com/titanclass/jsaas"
homepage = "https://github.com/titanclass/jsaas"
description = "An HTTP service that uses the Duktape JavaScript engine to safely execute JavaScript in a sandboxed environment."
readme = "README.md"

[dependencies]
bytes = "0.4"
futures = "0.1"
hyper = "0.12"
libc = "0.2"
native-tls = { version = "0.2", features = ["vendored"] }
num_cpus = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
tokio-threadpool = "0.1"
tokio-tls = "0.2"
tokio-signal = "0.2"
uuid = { version = "0.7", features = ["v4"] }

[dev-dependencies]
reqwest = "0.9.6"

[build-dependencies]
bindgen = "0.42.2"
cc = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

